--- a/appdeploy.yml
+++ b/appdeploy.yml
@@ -1,14 +1,14 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: hello-k8s
+  name: app
 spec:
   type: LoadBalancer
   ports:
     - port: 80
       targetPort: 8080
   selector:
-    app: hello-k8s
+    app: app
 ---
 apiVersion: apps/v1
 kind: Deployment
