--- a/appdeploy-v1.yml
+++ b/appdeploy-v1.yml
@@ -1,42 +1,19 @@
----
 apiVersion: v1
 kind: Service
 metadata:
-  name: "app"
-  namespace: "env-b"
+  name: app
 spec:
+  type: LoadBalancer
   ports:
     - port: 80
-      targetPort: 80
-      protocol: TCP
-  type: NodePort
+      targetPort: 8080
   selector:
-    app: "app"
----
-apiVersion: extensions/v1beta1
-kind: Ingress
-metadata:
-  name: "app"
-  namespace: "env-b"
-  annotations:
-    kubernetes.io/ingress.class: alb
-    alb.ingress.kubernetes.io/scheme: internet-facing
-  labels:
     app: app
-spec:
-  rules:
-    - http:
-        paths:
-          - path: /*
-            backend:
-              serviceName: "app"
-              servicePort: 80
 ---
 apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: app
-  namespace: "env-b"
 spec:
   replicas: 3
   strategy:
